--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="tech-icon">
                             <img src="./static/img/JavaScript-logo.png" alt="Tech Icon 1">
                         </div>
-                        <img src="https://images.pexels.com/photos/247322/pexels-photo-247322.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        <img src="https://i.pinimg.com/736x/2a/07/36/2a0736b064272c56efdd8b482448964e.jpg"
                             alt="Main Hero Image">
                     </div>
                     <div>
