--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="tech-icon">
                             <img src="./static/img/JavaScript-logo.png" alt="Tech Icon 1">
                         </div>
-                        <img src="https://i.pinimg.com/736x/2a/07/36/2a0736b064272c56efdd8b482448964e.jpg"
+                        <img src="./hero.png"
                             alt="Main Hero Image">
                     </div>
                     <div>
