--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h4 class="about-title">About me</h4>
 
         <div class="about-grid">
-            <img src="https://images.pexels.com/photos/247322/pexels-photo-247322.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            <img src="https://i.pinimg.com/736x/a4/1b/48/a41b48051dc7bc32b8686260cc0fb4da.jpg"
                 class="about-image" alt="About me image">
             <div class="about-content">
                 <p>
