--- a/contact.html
+++ b/contact.html
@@ -221,6 +221,7 @@
       </div>
     </div>
   </section>
+  
   <footer class="cosmic-footer">
     <!-- Cosmic Background Elements -->
     <div class="stellar-particle-field"></div>
@@ -230,7 +231,7 @@
       <!-- Quantum Grid Layout -->
       <div class="quantum-grid">
         <!-- About Nebula -->
-        <div class="cosmic-column">
+        <div class="c-column">
           <h5 class="column-title">
             <span class="title-ornament">⌬</span> Stellar Origins
           </h5>
@@ -246,7 +247,7 @@
         </div>
 
         <!-- Navigation Constellation -->
-        <div class="cosmic-column">
+        <div class="c-column">
           <h5 class="column-title">
             <span class="title-ornament">✧</span> Cosmic Pathways
           </h5>
@@ -259,11 +260,11 @@
         </div>
 
         <!-- Quantum Contacts -->
-        <div class="cosmic-column">
+        <div class="c-column">
           <h5 class="column-title">
             <span class="title-ornament">⚛</span> Entanglement Links
           </h5>
-          <div class="quantum-contact">
+          <div class="quantum-contacts">
             <a href="mailto:contact@celestial.dev" class="quantum-contact">
               <span class="contact-orb"></span>
               <span>contact@celestial.dev</span>
@@ -280,7 +281,7 @@
         </div>
 
         <!-- Stellar Networks -->
-        <div class="cosmic-column">
+        <div class="c-column">
           <h5 class="column-title">
             <span class="title-ornament">✺</span> Wormhole Networks
           </h5>
