--- a/services.html
+++ b/services.html
@@ -276,7 +276,121 @@
     </div>
   </section>
   
+  <footer class="cosmic-footer">
+    <!-- Cosmic Background Elements -->
+    <div class="stellar-particle-field"></div>
+    <div class="nebula-overlay"></div>
 
+    <div class="cosmic-container">
+      <!-- Quantum Grid Layout -->
+      <div class="quantum-grid">
+        <!-- About Nebula -->
+        <div class="c-column">
+          <h5 class="column-title">
+            <span class="title-ornament">⌬</span> Stellar Origins
+          </h5>
+          <p class="column-text">
+            Forged in the heart of a dying star, our digital creations transcend space and time.
+            We craft experiences that bend reality.
+          </p>
+          <div class="quantum-signature">
+            <span class="signature-line"></span>
+            <span class="signature-text">Beyond Imagination</span>
+            <span class="signature-line"></span>
+          </div>
+        </div>
+
+        <!-- Navigation Constellation -->
+        <div class="c-column">
+          <h5 class="column-title">
+            <span class="title-ornament">✧</span> Cosmic Pathways
+          </h5>
+          <ul class="stellar-links">
+            <li><a href="#home" class="stellar-link">Home Singularity</a></li>
+            <li><a href="#projects" class="stellar-link">Project Nebulas</a></li>
+            <li><a href="#skills" class="stellar-link">Skill Constellations</a></li>
+            <li><a href="#contact" class="stellar-link">Transmission Hub</a></li>
+          </ul>
+        </div>
+
+        <!-- Quantum Contacts -->
+        <div class="c-column">
+          <h5 class="column-title">
+            <span class="title-ornament">⚛</span> Entanglement Links
+          </h5>
+          <div class="quantum-contacts">
+            <a href="mailto:contact@celestial.dev" class="quantum-contact">
+              <span class="contact-orb"></span>
+              <span>contact@celestial.dev</span>
+            </a>
+            <a href="tel:+1234567890" class="quantum-contact">
+              <span class="contact-orb"></span>
+              <span>+1 (234) 567-890</span>
+            </a>
+            <div class="quantum-contact">
+              <span class="contact-orb"></span>
+              <span>Andromeda Galaxy, Sector X-42</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Stellar Networks -->
+        <div class="c-column">
+          <h5 class="column-title">
+            <span class="title-ornament">✺</span> Wormhole Networks
+          </h5>
+          <div class="stellar-social">
+            <a href="#" class="social-orb">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+              </svg>
+            </a>
+            <a href="#" class="social-orb">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <rect x="2" y="2" width="20" height="20" rx="5" ry="5" />
+                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
+              </svg>
+            </a>
+            <a href="#" class="social-orb">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path
+                  d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z" />
+              </svg>
+            </a>
+            <a href="#" class="social-orb">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                <rect x="2" y="9" width="4" height="12" />
+                <circle cx="4" cy="4" r="2" />
+              </svg>
+            </a>
+          </div>
+          <div class="quantum-transmission">
+            <p>Initiate direct quantum entanglement:</p>
+            <button class="transmission-btn">
+              <span class="btn-orb"></span>
+              <span>Emergency Beam</span>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Celestial Copyright -->
+      <div class="celestial-copyright">
+        <div class="copyright-divider"></div>
+        <p class="copyright-text">
+          <span class="copyright-ornament">⚡</span>
+          © 3023 Celestial Designs. All realities reserved.
+          <span class="copyright-ornament">⚡</span>
+        </p>
+      </div>
+    </div>
+  </footer>
   <script src="./static/js/app.js"></script>
 </body>
 
