--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,8 @@
       </div>
     </div>
   </section>
-  
+
+ 
   <footer class="cosmic-footer">
     <!-- Cosmic Background Elements -->
     <div class="stellar-particle-field"></div>
@@ -236,8 +237,8 @@
             <span class="title-ornament">⌬</span> Stellar Origins
           </h5>
           <p class="column-text">
-            Forged in the heart of a dying star, our digital creations transcend space and time.
-            We craft experiences that bend reality.
+            We’re a creative development studio focused on crafting clean, responsive, and user-centered digital
+            experiences. From concept to deployment, we turn ideas into polished products.
           </p>
           <div class="quantum-signature">
             <span class="signature-line"></span>
@@ -249,12 +250,12 @@
         <!-- Navigation Constellation -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">✧</span> Cosmic Pathways
+            <span class="title-ornament">✧</span> Explore
           </h5>
           <ul class="stellar-links">
-            <li><a href="#home" class="stellar-link">Home Singularity</a></li>
-            <li><a href="#projects" class="stellar-link">Project Nebulas</a></li>
-            <li><a href="#skills" class="stellar-link">Skill Constellations</a></li>
+            <li><a href="#home" class="stellar-link">Home</a></li>
+            <li><a href="#projects" class="stellar-link">Project </a></li>
+            <li><a href="#skills" class="stellar-link">Skill </a></li>
             <li><a href="#contact" class="stellar-link">Transmission Hub</a></li>
           </ul>
         </div>
@@ -262,7 +263,7 @@
         <!-- Quantum Contacts -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">⚛</span> Entanglement Links
+            <span class="title-ornament">⚛</span> Contact
           </h5>
           <div class="quantum-contacts">
             <a href="mailto:contact@celestial.dev" class="quantum-contact">
@@ -275,7 +276,7 @@
             </a>
             <div class="quantum-contact">
               <span class="contact-orb"></span>
-              <span>Andromeda Galaxy, Sector X-42</span>
+              <span>Remote & Worldwide</span>
             </div>
           </div>
         </div>
@@ -283,7 +284,7 @@
         <!-- Stellar Networks -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">✺</span> Wormhole Networks
+            <span class="title-ornament">✺</span> Connect with Us
           </h5>
           <div class="stellar-social">
             <a href="#" class="social-orb">
@@ -317,7 +318,7 @@
             </a>
           </div>
           <div class="quantum-transmission">
-            <p>Initiate direct quantum entanglement:</p>
+            <p>Get in Touch Instantly:</p>
             <button class="transmission-btn">
               <span class="btn-orb"></span>
               <span>Emergency Beam</span>
@@ -331,7 +332,7 @@
         <div class="copyright-divider"></div>
         <p class="copyright-text">
           <span class="copyright-ornament">⚡</span>
-          © 3023 Celestial Designs. All realities reserved.
+          © 2025 DreamCraft Studios. All rights reserved.
           <span class="copyright-ornament">⚡</span>
         </p>
       </div>
