--- a/services.html
+++ b/services.html
@@ -77,10 +77,10 @@
       <div class="eluxe-diamond-particle eluxe-dp-3"></div>
       <div class="eluxe-diamond-particle eluxe-dp-4"></div>
     </div>
-    
+
     <!-- Platinum Mesh Overlay -->
     <div class="eluxe-platinum-mesh"></div>
-    
+
     <div class="eluxe-container">
       <!-- Luxury Section Header -->
       <div class="eluxe-header" data-scroll data-scroll-offset="200">
@@ -95,20 +95,23 @@
           </h2>
           <div class="eluxe-title-ornament">
             <svg viewBox="0 0 120 8" preserveAspectRatio="none">
-              <path d="M0,4 C30,8 90,0 120,4 L120,8 L0,8 Z" fill="url(#eluxe-ornament-gradient)"/>
+              <path d="M0,4 C30,8 90,0 120,4 L120,8 L0,8 Z" fill="url(#eluxe-ornament-gradient)" />
             </svg>
           </div>
         </div>
         <p class="eluxe-subtitle" data-scroll data-scroll-delay="0.3">Bespoke Digital Solutions</p>
       </div>
-  
+
       <!-- Luxury Intro Text -->
       <div class="eluxe-services-intro" data-scroll data-scroll-delay="0.4">
         <p>
-          At <span class="eluxe-gold-text">[Your Company Name]</span>, we craft exclusive digital experiences for discerning clients. Our concierge-level services are meticulously designed to elevate elite brands in the digital landscape. From avant-garde web architectures to secure cloud fortresses, we deliver nothing less than excellence tailored to your exacting standards.
+          At <span class="eluxe-gold-text">[Your Company Name]</span>, we craft exclusive digital experiences for
+          discerning clients. Our concierge-level services are meticulously designed to elevate elite brands in the
+          digital landscape. From avant-garde web architectures to secure cloud fortresses, we deliver nothing less than
+          excellence tailored to your exacting standards.
         </p>
       </div>
-  
+
       <!-- Premium Services Grid -->
       <div class="eluxe-services-grid">
         <!-- Service 1 -->
@@ -117,157 +120,175 @@
           <div class="eluxe-service-number">01</div>
           <div class="eluxe-service-platinum-border"></div>
           <div class="eluxe-service-media">
-            <div class="eluxe-service-image" style="background-image: url('https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')"></div>
+            <div class="eluxe-service-image"
+              style="background-image: url('https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')">
+            </div>
             <div class="eluxe-service-overlay"></div>
           </div>
           <div class="eluxe-service-content">
             <div class="eluxe-service-icon">
               <svg viewBox="0 0 64 64">
-                <path d="M32 2L2 22l30 20 30-20L32 2z" vector-effect="non-scaling-stroke"/>
-                <path d="M2 22v20l30 20 30-20V22" vector-effect="non-scaling-stroke"/>
+                <path d="M32 2L2 22l30 20 30-20L32 2z" vector-effect="non-scaling-stroke" />
+                <path d="M2 22v20l30 20 30-20V22" vector-effect="non-scaling-stroke" />
               </svg>
             </div>
             <h3>Web Architecture</h3>
-            <p>We engineer responsive digital estates with precision-crafted code and avant-garde designs. Our bespoke web solutions combine performance with uncompromising aesthetics.</p>
+            <p>We engineer responsive digital estates with precision-crafted code and avant-garde designs. Our bespoke
+              web solutions combine performance with uncompromising aesthetics.</p>
             <div class="eluxe-service-cta">
               <span>Explore Service</span>
               <svg viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5" />
               </svg>
             </div>
           </div>
         </div>
-  
+
         <!-- Service 2 -->
         <div class="eluxe-service-card" data-scroll data-scroll-offset="10%" data-scroll-delay="0.1">
           <div class="eluxe-service-glow"></div>
           <div class="eluxe-service-number">02</div>
           <div class="eluxe-service-platinum-border"></div>
           <div class="eluxe-service-media">
-            <div class="eluxe-service-image" style="background-image: url('https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')"></div>
+            <div class="eluxe-service-image"
+              style="background-image: url('https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')">
+            </div>
             <div class="eluxe-service-overlay"></div>
           </div>
           <div class="eluxe-service-content">
             <div class="eluxe-service-icon">
               <svg viewBox="0 0 64 64">
-                <circle cx="32" cy="32" r="24" vector-effect="non-scaling-stroke"/>
-                <path d="M32 16v16l12 8" vector-effect="non-scaling-stroke"/>
+                <circle cx="32" cy="32" r="24" vector-effect="non-scaling-stroke" />
+                <path d="M32 16v16l12 8" vector-effect="non-scaling-stroke" />
               </svg>
             </div>
             <h3>Experience Design</h3>
-            <p>Our design artisans craft intuitive interfaces that captivate and convert. Every interaction is meticulously planned to create seamless, memorable journeys.</p>
+            <p>Our design artisans craft intuitive interfaces that captivate and convert. Every interaction is
+              meticulously planned to create seamless, memorable journeys.</p>
             <div class="eluxe-service-cta">
               <span>Explore Service</span>
               <svg viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5" />
               </svg>
             </div>
           </div>
         </div>
-  
+
         <!-- Service 3 -->
         <div class="eluxe-service-card" data-scroll data-scroll-offset="10%" data-scroll-delay="0.2">
           <div class="eluxe-service-glow"></div>
           <div class="eluxe-service-number">03</div>
           <div class="eluxe-service-platinum-border"></div>
           <div class="eluxe-service-media">
-            <div class="eluxe-service-image" style="background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80')"></div>
+            <div class="eluxe-service-image"
+              style="background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80')">
+            </div>
             <div class="eluxe-service-overlay"></div>
           </div>
           <div class="eluxe-service-content">
             <div class="eluxe-service-icon">
               <svg viewBox="0 0 64 64">
-                <path d="M8 8h48v48H8z"/>
-                <path d="M20 20h24v24H20z"/>
+                <path d="M8 8h48v48H8z" />
+                <path d="M20 20h24v24H20z" />
               </svg>
             </div>
             <h3>Cloud Infrastructure</h3>
-            <p>We architect secure, scalable cloud fortresses that grow with your ambitions. Our solutions ensure enterprise-grade reliability with elite performance.</p>
+            <p>We architect secure, scalable cloud fortresses that grow with your ambitions. Our solutions ensure
+              enterprise-grade reliability with elite performance.</p>
             <div class="eluxe-service-cta">
               <span>Explore Service</span>
               <svg viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5" />
               </svg>
             </div>
           </div>
         </div>
-  
+
         <!-- Service 4 -->
         <div class="eluxe-service-card" data-scroll data-scroll-offset="10%" data-scroll-delay="0.3">
           <div class="eluxe-service-glow"></div>
           <div class="eluxe-service-number">04</div>
           <div class="eluxe-service-platinum-border"></div>
           <div class="eluxe-service-media">
-            <div class="eluxe-service-image" style="background-image: url('https://images.unsplash.com/photo-1633356122544-f134324a6cee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')"></div>
+            <div class="eluxe-service-image"
+              style="background-image: url('https://images.unsplash.com/photo-1633356122544-f134324a6cee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')">
+            </div>
             <div class="eluxe-service-overlay"></div>
           </div>
           <div class="eluxe-service-content">
             <div class="eluxe-service-icon">
               <svg viewBox="0 0 64 64">
-                <circle cx="32" cy="24" r="8"/>
-                <path d="M56 40V16a8 8 0 0 0-8-8H16a8 8 0 0 0-8 8v32a8 8 0 0 0 8 8h32a8 8 0 0 0 8-8v-8z"/>
+                <circle cx="32" cy="24" r="8" />
+                <path d="M56 40V16a8 8 0 0 0-8-8H16a8 8 0 0 0-8 8v32a8 8 0 0 0 8 8h32a8 8 0 0 0 8-8v-8z" />
               </svg>
             </div>
             <h3>API Concierge</h3>
-            <p>Our integration specialists create seamless connections between your digital ecosystem components, ensuring flawless data flow and functionality.</p>
+            <p>Our integration specialists create seamless connections between your digital ecosystem components,
+              ensuring flawless data flow and functionality.</p>
             <div class="eluxe-service-cta">
               <span>Explore Service</span>
               <svg viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5" />
               </svg>
             </div>
           </div>
         </div>
-  
+
         <!-- Service 5 -->
         <div class="eluxe-service-card" data-scroll data-scroll-offset="10%" data-scroll-delay="0.4">
           <div class="eluxe-service-glow"></div>
           <div class="eluxe-service-number">05</div>
           <div class="eluxe-service-platinum-border"></div>
           <div class="eluxe-service-media">
-            <div class="eluxe-service-image" style="background-image: url('https://images.unsplash.com/photo-1563986768609-322da13575f3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')"></div>
+            <div class="eluxe-service-image"
+              style="background-image: url('https://images.unsplash.com/photo-1563986768609-322da13575f3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')">
+            </div>
             <div class="eluxe-service-overlay"></div>
           </div>
           <div class="eluxe-service-content">
             <div class="eluxe-service-icon">
               <svg viewBox="0 0 64 64">
-                <path d="M32 2L2 22l30 20 30-20L32 2z" vector-effect="non-scaling-stroke"/>
-                <path d="M2 22v20l30 20 30-20V22" vector-effect="non-scaling-stroke"/>
+                <path d="M32 2L2 22l30 20 30-20L32 2z" vector-effect="non-scaling-stroke" />
+                <path d="M2 22v20l30 20 30-20V22" vector-effect="non-scaling-stroke" />
               </svg>
             </div>
             <h3>Cyber Fortress</h3>
-            <p>We implement military-grade security protocols to safeguard your digital assets, ensuring compliance with the most stringent industry standards.</p>
+            <p>We implement military-grade security protocols to safeguard your digital assets, ensuring compliance with
+              the most stringent industry standards.</p>
             <div class="eluxe-service-cta">
               <span>Explore Service</span>
               <svg viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5" />
               </svg>
             </div>
           </div>
         </div>
-  
+
         <!-- Service 6 -->
         <div class="eluxe-service-card" data-scroll data-scroll-offset="10%" data-scroll-delay="0.5">
           <div class="eluxe-service-glow"></div>
           <div class="eluxe-service-number">06</div>
           <div class="eluxe-service-platinum-border"></div>
           <div class="eluxe-service-media">
-            <div class="eluxe-service-image" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')"></div>
+            <div class="eluxe-service-image"
+              style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')">
+            </div>
             <div class="eluxe-service-overlay"></div>
           </div>
           <div class="eluxe-service-content">
             <div class="eluxe-service-icon">
               <svg viewBox="0 0 64 64">
-                <circle cx="32" cy="32" r="24" vector-effect="non-scaling-stroke"/>
-                <path d="M32 16v16l12 8" vector-effect="non-scaling-stroke"/>
+                <circle cx="32" cy="32" r="24" vector-effect="non-scaling-stroke" />
+                <path d="M32 16v16l12 8" vector-effect="non-scaling-stroke" />
               </svg>
             </div>
             <h3>Data Intelligence</h3>
-            <p>Our analytics maestros transform raw data into strategic assets, employing advanced machine learning to uncover insights and predict trends.</p>
+            <p>Our analytics maestros transform raw data into strategic assets, employing advanced machine learning to
+              uncover insights and predict trends.</p>
             <div class="eluxe-service-cta">
               <span>Explore Service</span>
               <svg viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="1.5" />
               </svg>
             </div>
           </div>
@@ -275,7 +296,8 @@
       </div>
     </div>
   </section>
-  
+
+
   <footer class="cosmic-footer">
     <!-- Cosmic Background Elements -->
     <div class="stellar-particle-field"></div>
@@ -290,8 +312,8 @@
             <span class="title-ornament">⌬</span> Stellar Origins
           </h5>
           <p class="column-text">
-            Forged in the heart of a dying star, our digital creations transcend space and time.
-            We craft experiences that bend reality.
+            We’re a creative development studio focused on crafting clean, responsive, and user-centered digital
+            experiences. From concept to deployment, we turn ideas into polished products.
           </p>
           <div class="quantum-signature">
             <span class="signature-line"></span>
@@ -303,12 +325,12 @@
         <!-- Navigation Constellation -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">✧</span> Cosmic Pathways
+            <span class="title-ornament">✧</span> Explore
           </h5>
           <ul class="stellar-links">
-            <li><a href="#home" class="stellar-link">Home Singularity</a></li>
-            <li><a href="#projects" class="stellar-link">Project Nebulas</a></li>
-            <li><a href="#skills" class="stellar-link">Skill Constellations</a></li>
+            <li><a href="#home" class="stellar-link">Home</a></li>
+            <li><a href="#projects" class="stellar-link">Project </a></li>
+            <li><a href="#skills" class="stellar-link">Skill </a></li>
             <li><a href="#contact" class="stellar-link">Transmission Hub</a></li>
           </ul>
         </div>
@@ -316,7 +338,7 @@
         <!-- Quantum Contacts -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">⚛</span> Entanglement Links
+            <span class="title-ornament">⚛</span> Contact
           </h5>
           <div class="quantum-contacts">
             <a href="mailto:contact@celestial.dev" class="quantum-contact">
@@ -329,7 +351,7 @@
             </a>
             <div class="quantum-contact">
               <span class="contact-orb"></span>
-              <span>Andromeda Galaxy, Sector X-42</span>
+              <span>Remote & Worldwide</span>
             </div>
           </div>
         </div>
@@ -337,7 +359,7 @@
         <!-- Stellar Networks -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">✺</span> Wormhole Networks
+            <span class="title-ornament">✺</span> Connect with Us
           </h5>
           <div class="stellar-social">
             <a href="#" class="social-orb">
@@ -371,7 +393,7 @@
             </a>
           </div>
           <div class="quantum-transmission">
-            <p>Initiate direct quantum entanglement:</p>
+            <p>Get in Touch Instantly:</p>
             <button class="transmission-btn">
               <span class="btn-orb"></span>
               <span>Emergency Beam</span>
@@ -385,12 +407,13 @@
         <div class="copyright-divider"></div>
         <p class="copyright-text">
           <span class="copyright-ornament">⚡</span>
-          © 3023 Celestial Designs. All realities reserved.
+          © 2025 DreamCraft Studios. All rights reserved.
           <span class="copyright-ornament">⚡</span>
         </p>
       </div>
     </div>
   </footer>
+
   <script src="./static/js/app.js"></script>
 </body>
 
