--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
   </header>
 
   <!--  -->
-  
+
   <section class="eluxe-projects" id="projects" data-scroll-section>
     <!-- Diamond Particle Background -->
     <div class="eluxe-projects-bg">
@@ -79,16 +79,16 @@
       <div class="eluxe-diamond-particle eluxe-dp-3"></div>
       <div class="eluxe-diamond-particle eluxe-dp-4"></div>
     </div>
-    
+
     <!-- Platinum Mesh Overlay -->
     <div class="eluxe-platinum-mesh"></div>
-    
+
     <!-- Gold Accent Elements -->
     <div class="eluxe-gold-accents">
       <div class="eluxe-gold-line eluxe-gl-1"></div>
       <div class="eluxe-gold-line eluxe-gl-2"></div>
     </div>
-  
+
     <div class="eluxe-container">
       <!-- Luxury Section Header -->
       <div class="eluxe-header" data-scroll data-scroll-offset="200">
@@ -103,13 +103,13 @@
           </h2>
           <div class="eluxe-title-ornament">
             <svg viewBox="0 0 120 8" preserveAspectRatio="none">
-              <path d="M0,4 C30,8 90,0 120,4 L120,8 L0,8 Z" fill="url(#eluxe-ornament-gradient)"/>
+              <path d="M0,4 C30,8 90,0 120,4 L120,8 L0,8 Z" fill="url(#eluxe-ornament-gradient)" />
             </svg>
           </div>
         </div>
         <p class="eluxe-subtitle" data-scroll data-scroll-delay="0.3">Bespoke Digital Masterpieces</p>
       </div>
-  
+
       <!-- Luxury Filter Buttons -->
       <div class="eluxe-filter" data-scroll data-scroll-delay="0.4">
         <button class="eluxe-filter-btn active" data-filter="all">
@@ -129,7 +129,7 @@
           <span class="eluxe-filter-text">AI Innovations</span>
         </button>
       </div>
-  
+
       <!-- Luxury Projects Grid -->
       <div class="eluxe-projects-grid">
         <!-- Project 1 -->
@@ -148,13 +148,15 @@
               <span class="eluxe-tech-item">PostgreSQL</span>
             </div>
             <p class="eluxe-project-description">
-              An exclusive AI marketing concierge service that anticipates client needs before they arise, delivering hyper-personalized experiences.
+              An exclusive AI marketing concierge service that anticipates client needs before they arise, delivering
+              hyper-personalized experiences.
             </p>
             <div class="eluxe-project-actions">
               <a href="https://github.com/Kenneth12222/shoppify_blue_print" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21"/>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21" />
                   </svg>
                 </span>
                 <span>Source Code</span>
@@ -162,7 +164,7 @@
               <a href="https://shoppify-50wt.onrender.com/" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3"/>
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3" />
                   </svg>
                 </span>
                 <span>Live Preview</span>
@@ -171,7 +173,7 @@
           </div>
           <div class="eluxe-project-border"></div>
         </div>
-  
+
         <!-- Project 2 -->
         <div class="eluxe-project" data-category="web" data-scroll data-scroll-offset="10%" data-scroll-delay="0.1">
           <div class="eluxe-project-number">02</div>
@@ -188,13 +190,15 @@
               <span class="eluxe-tech-item">PostgreSQL</span>
             </div>
             <p class="eluxe-project-description">
-              A premium AI image generation suite offering unparalleled creative control and artistic refinement for discerning clients.
+              A premium AI image generation suite offering unparalleled creative control and artistic refinement for
+              discerning clients.
             </p>
             <div class="eluxe-project-actions">
               <a href="https://github.com/Kenneth12222/shoppify_blue_print" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21"/>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21" />
                   </svg>
                 </span>
                 <span>Source Code</span>
@@ -202,7 +206,7 @@
               <a href="https://shoppify-50wt.onrender.com/" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3"/>
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3" />
                   </svg>
                 </span>
                 <span>Live Preview</span>
@@ -211,7 +215,7 @@
           </div>
           <div class="eluxe-project-border"></div>
         </div>
-  
+
         <!-- Project 3 -->
         <div class="eluxe-project" data-category="web" data-scroll data-scroll-offset="10%" data-scroll-delay="0.2">
           <div class="eluxe-project-number">03</div>
@@ -228,13 +232,15 @@
               <span class="eluxe-tech-item">PostgreSQL</span>
             </div>
             <p class="eluxe-project-description">
-              A luxury e-commerce destination offering white-glove service and exclusive member benefits for the most discerning shoppers.
+              A luxury e-commerce destination offering white-glove service and exclusive member benefits for the most
+              discerning shoppers.
             </p>
             <div class="eluxe-project-actions">
               <a href="https://github.com/Kenneth12222/shoppify_blue_print" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21"/>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21" />
                   </svg>
                 </span>
                 <span>Source Code</span>
@@ -242,7 +248,7 @@
               <a href="https://shoppify-50wt.onrender.com/" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3"/>
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3" />
                   </svg>
                 </span>
                 <span>Live Preview</span>
@@ -251,7 +257,7 @@
           </div>
           <div class="eluxe-project-border"></div>
         </div>
-  
+
         <!-- Project 4 -->
         <div class="eluxe-project" data-category="web" data-scroll data-scroll-offset="10%" data-scroll-delay="0.3">
           <div class="eluxe-project-number">04</div>
@@ -268,13 +274,15 @@
               <span class="eluxe-tech-item">PostgreSQL</span>
             </div>
             <p class="eluxe-project-description">
-              A high-end retail platform featuring personalized shopping assistants and augmented reality previews for luxury goods.
+              A high-end retail platform featuring personalized shopping assistants and augmented reality previews for
+              luxury goods.
             </p>
             <div class="eluxe-project-actions">
               <a href="https://github.com/Kenneth12222/shoppify_blue_print" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21"/>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21" />
                   </svg>
                 </span>
                 <span>Source Code</span>
@@ -282,7 +290,7 @@
               <a href="https://shoppify-50wt.onrender.com/" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3"/>
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3" />
                   </svg>
                 </span>
                 <span>Live Preview</span>
@@ -291,7 +299,7 @@
           </div>
           <div class="eluxe-project-border"></div>
         </div>
-  
+
         <!-- Project 5 -->
         <div class="eluxe-project" data-category="app" data-scroll data-scroll-offset="10%" data-scroll-delay="0.4">
           <div class="eluxe-project-number">05</div>
@@ -314,7 +322,8 @@
               <a href="https://github.com/Kenneth12222/pet-shop" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21"/>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21" />
                   </svg>
                 </span>
                 <span>Source Code</span>
@@ -322,7 +331,7 @@
               <a href="https://pet-shop-gilt.vercel.app/" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3"/>
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3" />
                   </svg>
                 </span>
                 <span>Live Preview</span>
@@ -331,7 +340,7 @@
           </div>
           <div class="eluxe-project-border"></div>
         </div>
-  
+
         <!-- Project 6 -->
         <div class="eluxe-project" data-category="ai" data-scroll data-scroll-offset="10%" data-scroll-delay="0.5">
           <div class="eluxe-project-number">06</div>
@@ -348,13 +357,15 @@
               <span class="eluxe-tech-item">React</span>
             </div>
             <p class="eluxe-project-description">
-              A premium AI analytics dashboard providing exclusive market insights and predictive intelligence for elite clients.
+              A premium AI analytics dashboard providing exclusive market insights and predictive intelligence for elite
+              clients.
             </p>
             <div class="eluxe-project-actions">
               <a href="https://github.com/Kenneth12222/Digital_Agency" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21"/>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3.2 3.2 0 00-.9-2.5c3.1-.4 6.4-1.5 6.4-7A5.4 5.4 0 0020 4.8 5 5 0 0020 1s-1.3-.3-4 1.5a13.4 13.4 0 00-7 0C6.3.7 5 1 5 1a5 5 0 000 3.8 5.4 5.4 0 001.6 3.9c0 5.5 3.3 6.6 6.4 7a3.2 3.2 0 00.9 2.5V21" />
                   </svg>
                 </span>
                 <span>Source Code</span>
@@ -362,7 +373,7 @@
               <a href="https://digital-agency-wine.vercel.app/" class="eluxe-project-link">
                 <span class="eluxe-link-icon">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3"/>
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6m4-3h6v6m-11 5L21 3" />
                   </svg>
                 </span>
                 <span>Live Preview</span>
@@ -374,7 +385,8 @@
       </div>
     </div>
   </section>
-  
+
+ 
   <footer class="cosmic-footer">
     <!-- Cosmic Background Elements -->
     <div class="stellar-particle-field"></div>
@@ -389,8 +401,8 @@
             <span class="title-ornament">⌬</span> Stellar Origins
           </h5>
           <p class="column-text">
-            Forged in the heart of a dying star, our digital creations transcend space and time.
-            We craft experiences that bend reality.
+            We’re a creative development studio focused on crafting clean, responsive, and user-centered digital
+            experiences. From concept to deployment, we turn ideas into polished products.
           </p>
           <div class="quantum-signature">
             <span class="signature-line"></span>
@@ -402,12 +414,12 @@
         <!-- Navigation Constellation -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">✧</span> Cosmic Pathways
+            <span class="title-ornament">✧</span> Explore
           </h5>
           <ul class="stellar-links">
-            <li><a href="#home" class="stellar-link">Home Singularity</a></li>
-            <li><a href="#projects" class="stellar-link">Project Nebulas</a></li>
-            <li><a href="#skills" class="stellar-link">Skill Constellations</a></li>
+            <li><a href="#home" class="stellar-link">Home</a></li>
+            <li><a href="#projects" class="stellar-link">Project </a></li>
+            <li><a href="#skills" class="stellar-link">Skill </a></li>
             <li><a href="#contact" class="stellar-link">Transmission Hub</a></li>
           </ul>
         </div>
@@ -415,7 +427,7 @@
         <!-- Quantum Contacts -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">⚛</span> Entanglement Links
+            <span class="title-ornament">⚛</span> Contact
           </h5>
           <div class="quantum-contacts">
             <a href="mailto:contact@celestial.dev" class="quantum-contact">
@@ -428,7 +440,7 @@
             </a>
             <div class="quantum-contact">
               <span class="contact-orb"></span>
-              <span>Andromeda Galaxy, Sector X-42</span>
+              <span>Remote & Worldwide</span>
             </div>
           </div>
         </div>
@@ -436,7 +448,7 @@
         <!-- Stellar Networks -->
         <div class="c-column">
           <h5 class="column-title">
-            <span class="title-ornament">✺</span> Wormhole Networks
+            <span class="title-ornament">✺</span> Connect with Us
           </h5>
           <div class="stellar-social">
             <a href="#" class="social-orb">
@@ -470,7 +482,7 @@
             </a>
           </div>
           <div class="quantum-transmission">
-            <p>Initiate direct quantum entanglement:</p>
+            <p>Get in Touch Instantly:</p>
             <button class="transmission-btn">
               <span class="btn-orb"></span>
               <span>Emergency Beam</span>
@@ -484,12 +496,13 @@
         <div class="copyright-divider"></div>
         <p class="copyright-text">
           <span class="copyright-ornament">⚡</span>
-          © 3023 Celestial Designs. All realities reserved.
+          © 2025 DreamCraft Studios. All rights reserved.
           <span class="copyright-ornament">⚡</span>
         </p>
       </div>
     </div>
   </footer>
+
   <script src="./static/js/app.js"></script>
 </body>
 
