--- a/index.html
+++ b/index.html
@@ -507,7 +507,6 @@
   </section>
 
   <!-- service -->
-
   <section class="elite-services" id="services">
     <!-- Decorative Elements -->
     <div class="elite-decoration elite-diamond-3"></div>
@@ -606,8 +605,7 @@
     </div>
   </section>
 
-  <!--  -->
-
+  <!-- portfolio -->
   <section class="eluxe-projects" id="projects" data-scroll-section>
     <!-- Diamond Particle Background -->
     <div class="eluxe-projects-bg">
