--- a/index.html
+++ b/index.html
@@ -921,8 +921,7 @@
     </div>
   </section>
 
-
-  <!--  -->
+  <!-- contact -->
   <section class="quantum-contact-section" id="contact">
     <!-- Quantum Energy Network -->
     <div class="q-energy-network">
@@ -1073,7 +1072,6 @@
       </div>
     </div>
   </section>
-
 
   <footer class="cosmic-footer">
     <!-- Cosmic Background Elements -->
