--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,7 @@
       </ul>
     </nav>
   </header>
-
-
-
+  <!-- contact -->
   <section class="quantum-contact-section" id="contact">
     <!-- Quantum Energy Network -->
     <div class="q-energy-network">
@@ -90,8 +88,8 @@
         <div class="dch-shard shard-1"></div>
         <div class="dch-shard shard-2"></div>
         <h2 class="quantum-contact-title">
-          <span class="qct-word">Quantum</span>
-          <span class="qct-word">Connection</span>
+          <span class="qct-word">Connect With</span>
+          <span class="qct-word">Us</span>
         </h2>
         <div class="qct-underline">
           <div class="qct-underline-glow"></div>
@@ -113,24 +111,24 @@
             </div>
             <div class="qtf-group">
               <div class="qtf-input-hologram"></div>
-              <label>Quantum Signature</label>
+              <label>Signature</label>
               <input type="email" class="qtf-input" placeholder="Your secure email" required>
               <div class="qtf-input-aura"></div>
             </div>
             <div class="qtf-group">
               <div class="qtf-input-hologram"></div>
-              <label>Communication Vector</label>
+              <label>Communication</label>
               <select class="qtf-input">
                 <option value="">Select priority level</option>
                 <option value="1">Standard Encryption</option>
                 <option value="2">Executive Priority</option>
-                <option value="3">Quantum Urgent</option>
+                <option value="3">Urgent</option>
               </select>
               <div class="qtf-input-aura"></div>
             </div>
             <div class="qtf-group">
               <div class="qtf-input-hologram"></div>
-              <label>Message Protocol</label>
+              <label>Message</label>
               <textarea class="qtf-input" rows="5" placeholder="Encode your message" required></textarea>
               <div class="qtf-input-aura"></div>
             </div>
@@ -145,7 +143,7 @@
         <div class="quantum-access-hub">
           <div class="qah-hologram"></div>
           <div class="qah-content">
-            <h3 class="qah-title">Secure Access Nodes</h3>
+            <h3 class="qah-title">More Channel</h3>
             <div class="qah-divider">
               <div class="qah-divider-sparkle"></div>
             </div>
@@ -160,7 +158,7 @@
                   </svg>
                 </div>
                 <div class="qah-node-info">
-                  <h4>Quantum Voice Channel</h4>
+                  <h4>Voice Channel</h4>
                   <p>+254 742-164-615</p>
                   <div class="qah-node-status">
                     <div class="qah-status-dot"></div>
@@ -178,7 +176,7 @@
                   </svg>
                 </div>
                 <div class="qah-node-info">
-                  <h4>Secure Data Packet</h4>
+                  <h4>Gmail</h4>
                   <p>kennethmburu21@gmail.com</p>
                   <div class="qah-node-status">
                     <div class="qah-status-dot"></div>
@@ -222,7 +220,7 @@
     </div>
   </section>
 
- 
+  <!--footer  -->
   <footer class="cosmic-footer">
     <!-- Cosmic Background Elements -->
     <div class="stellar-particle-field"></div>
